--- a/q4/question4.ipynb
+++ b/q4/question4.ipynb
@@ -22,7 +22,8 @@
     "        return 1;\n",
     "    \n",
     "def main():\n",
-    "    print(factorial(6))\n",
+    "    for i in range(0,15,2):\n",
+    "        print(factorial(i))\n",
     "if __name__ == '__main__':\n",
     "    \n",
     "    main()"
