--- a/q5/question5.ipynb
+++ b/q5/question5.ipynb
@@ -22,12 +22,13 @@
     "    newstr=\"\"\n",
     "    for i in range(1,len(list)+1):\n",
     "        newstr=newstr+list[len(list)-i]+\" \"\n",
-    "    return newstr\n",
+    "    print(\"input:   \"+str+\"\\n\\noutput: \"+newstr)\n",
     "        \n",
     "def main():\n",
     "    str=\"Two roads diverged in a yellow wood, And sorry I could not travel both And be one traveler, long I stood And looked down one as far as I could To where it bent in the undergrowth\"\n",
-    "    newstr=reverse_words(str)\n",
-    "    print(\"input:   \"+str+\"\\n\\noutput: \"+newstr)\n",
+    "    str2=\"Then took the other, as just as fair, And having perhaps the better claim, Because it was grassy and wanted wear; Though as for that the passing there Had worn them really about the same,\"\n",
+    "    reverse_words(str)\n",
+    "    reverse_words(str2)\n",
     "\n",
     "if __name__ == '__main__':\n",
     " \n",
