--- a/q5/question5.ipynb
+++ b/q5/question5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "65938c49",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,14 @@
      "text": [
       "input:   Two roads diverged in a yellow wood, And sorry I could not travel both And be one traveler, long I stood And looked down one as far as I could To where it bent in the undergrowth\n",
       "\n",
-      "output: undergrowth the in bent it where To could I as far as one down looked And stood I long traveler, one be And both travel not could I sorry And wood, yellow a in diverged roads Two \n"
+      "output: undergrowth the in bent it where To could I as far as one down looked And stood I long traveler, one be And both travel not could I sorry And wood, yellow a in diverged roads Two \n",
+      "\n",
+      "\n",
+      "input:   Then took the other, as just as fair, And having perhaps the better claim, Because it was grassy and wanted wear; Though as for that the passing there Had worn them really about the same,\n",
+      "\n",
+      "output: same, the about really them worn Had there passing the that for as Though wear; wanted and grassy was it Because claim, better the perhaps having And fair, as just as other, the took Then \n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -22,7 +29,7 @@
     "    newstr=\"\"\n",
     "    for i in range(1,len(list)+1):\n",
     "        newstr=newstr+list[len(list)-i]+\" \"\n",
-    "    print(\"input:   \"+str+\"\\n\\noutput: \"+newstr)\n",
+    "    print(\"input:   \"+str+\"\\n\\noutput: \"+newstr+\"\\n\\n\")\n",
     "        \n",
     "def main():\n",
     "    str=\"Two roads diverged in a yellow wood, And sorry I could not travel both And be one traveler, long I stood And looked down one as far as I could To where it bent in the undergrowth\"\n",
@@ -60,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
